maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: value >- is not a member of Int
  while(y>-1){
         ^